finalizando estrutura base das páginas públicas

--- a/site_ong/templates/index.html
+++ b/site_ong/templates/index.html
@@ -1,24 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tecnologia Solidária</title>
-
-    <link rel="stylesheet" href="{{ url_for('static',
-    path='styles/style.css')}}" />
-	<script src="{{ url_for('static', path='js/script.js') }}"></script>
-  </head>
-  <body>
-	<header>
-        <nav>
-            <ul>
-                <li><a href="#" class="active">Página Inicial</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
+{% extends 'base.html' %}
+{% block content %}
     <main>
         <section class="banner">
             <h1>Tecnologia Solidária</h1>
@@ -30,8 +11,4 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc at cursus pellentesque, nisl eros pellentesque quam, a faucibus nisl nunc id nisl. Nulla facilisi. Donec id elit non mi aliquet sagittis. Sed posuere, nunc et porta euismod, nisi diam porttitor mauris, a sollicitudin nisi justo in libero. Vestibulum mollis mauris enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc at cursus pellentesque, nisl eros pellentesque quam, a faucibus nisl nunc id nisl. Nulla facilisi. Donec id elit non mi aliquet sagittis. Sed posuere, nunc et porta euismod, nisi diam porttitor mauris, a sollicitudin nisi justo in libero. Vestibulum mollis mauris enim.</p>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 Tecnologia Solidária. Todos os direitos reservados.</p>
-    </footer>
-  </body>
-</html>
+{% endblock %}
