exibindo full_name na dashboard

--- a/site_ong/templates/dashboard.html
+++ b/site_ong/templates/dashboard.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h1>Dashboard</h1>
-    <p>Welcome to the dashboard, {{ user.username }}!</p>
+    <p>Welcome to the dashboard, {{ user.full_name }}!</p>
 {% endblock %}
