--- a/site_ong/static/styles/style.css
+++ b/site_ong/static/styles/style.css
@@ -5,13 +5,13 @@
 }
 
 body {
-  background-color: #f0f2f5;
+  background-color: #f0f2f5; 
   font-family: Arial, sans-serif;
   line-height: 1.6;
 }
 
 header {
-  background-color: #333;
+  background-color: #648880; 
   color: #fff;
   padding: 1rem;
 }
@@ -34,6 +34,7 @@ nav ul li a.active {
 .banner {
   text-align: center;
   padding: 2rem;
+  color: #fff;
 }
 
 .banner h1 {
@@ -53,36 +54,34 @@ nav ul li a.active {
 
 .about {
   padding: 2rem;
-}
-
-.contact {
-  padding: 2rem;
+  background-color: #f0f2f5; 
+  color: #000; 
 }
 
 .cards {
     display: flex;
-    flex-direction: column; /* Stack cards vertically */
-    align-items: center; /* Center cards horizontally */
-    margin: 0 auto; /* Center the cards container */
-    max-width: 100vw; /* Ensure the container takes full viewport width */
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 100vw;
+    height: fit-content;
+    margin-bottom: 2rem;
 }
 
 .card {
     background: #fff;
     padding: 1.5rem;
     border-radius: 0.75rem;
-    margin: 1rem 0; /* Adjust vertical margin for vertical stack */
-    max-width: 100vw; /* Ensure the card takes full viewport width */
-    width: 300px; /* Set a fixed width for the card */
+    max-width: 100vw;
+    width: 300px;
     border: 1px solid #eaeaea;
     transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-
 .card a {
   cursor: pointer;
   text-decoration: none;
-  color: inherit;
+  color: #000;
 }
 
 .card h3 {
@@ -91,12 +90,12 @@ nav ul li a.active {
 }
 
 .card:hover {
-  color: #343e7f;
-  border-color: #343e7f;
+  color: #648880;
+  border-color: #648880;
 }
 
 footer {
-  background-color: #333;
+  background-color: #648880;
   color: #fff;
   text-align: center;
   padding: 1rem;
@@ -110,4 +109,283 @@ footer {
     flex-direction: column;
     text-align: center;
   }
+}
+
+/* login page  */
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #a1d3b0, #f6f1d3); 
+  color: #fff;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.login h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.login form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
+}
+
+.login label {
+  margin-bottom: 0.5rem;
+}
+
+.login input {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.login button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #648880;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login button:hover {
+  background-color: #a1d3b0; 
+}
+
+
+/* contact page */
+.contact {
+  padding: 2rem;
+  background-color: #f0f2f5; 
+  color: #000; 
+}
+
+.contact h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.contact form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.contact label {
+  margin-bottom: 0.5rem;
+}
+
+.contact input,.contact textarea {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.contact button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #648880; 
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.contact button:hover {
+  background-color: #a1d3b0; 
+}
+
+
+/* dashboard style */
+.dashboard {
+  padding: 2rem;
+  background-color: #f0f2f5; 
+  color: #000; 
+}
+
+.dashboard h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.dashboard p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.dashboard button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #648880; 
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 1rem;
+}
+
+.dashboard button:hover {
+  background-color: #a1d3b0; 
+}
+
+
+/* post form style */
+.new-post {
+  padding: 2rem;
+  background-color: #f0f2f5; 
+  color: #000; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; 
+}
+
+.new-post.title-add-post {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.new-post.form-container {
+  max-width: 600px;
+  margin: 0 auto;
+  width: 100%; 
+}
+
+.new-post.form-group {
+  margin-bottom: 1rem;
+}
+
+.new-post.form-group input,
+.new-post.form-group textarea {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.new-post.form-group textarea {
+  resize: vertical;
+}
+
+.new-post input[type="submit"] {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #648880; 
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.new-post input[type="submit"]:hover {
+  background-color: #a1d3b0;
+}
+
+/* new user */
+.new-user {
+  padding: 2rem;
+  background-color: #f0f2f5;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.new-user h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.new-user form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.new-user label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.new-user input[type="text"],
+.new-user input[type="username"],
+.new-user input[type="password"] {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.new-user button[type="submit"] {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #648880;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.new-user button[type="submit"]:hover {
+  background-color: #a1d3b0;
+}
+
+
+/* user list */
+.user-listing {
+  padding: 2rem;
+  background-color: #f0f2f5;
+  color: #000;
+}
+
+.user-listing h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.user-listing table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0 auto;
+}
+
+.user-listing th,
+.user-listing td {
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+.user-listing th {
+  background-color: #648880;
+  color: #fff;
+}
+
+.user-listing tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.user-listing tr:hover {
+  background-color: #e6e6e6;
 }
