--- a/site_ong/templates/base.html
+++ b/site_ong/templates/base.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="/" >Página Inicial</a></li>
                 <li><a href="/contato">Contato</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="/posts">Blog</a></li>
             </ul>
         </nav>
     </header>
