--- a/site_ong/templates/edit_post.html
+++ b/site_ong/templates/edit_post.html
@@ -37,7 +37,7 @@
             name="post-form"
             id="post-form"
             method="post"
-            action="/posts/novo"
+            action="/posts/editar/{{ post.id }}"
           >
             <div class="form-group">
               <input
@@ -48,6 +48,7 @@
                 required
                 autofocus
                 autocomplete="false"
+                value="{{ post.title }}"
               />
             </div>
             <div class="form-group">
@@ -58,6 +59,7 @@
                 id="subhead"
                 required
                 autocomplete="false"
+                value="{{ post.subhead }}"
               />
             </div>
             <div class="form-group">
@@ -68,6 +70,7 @@
                 id="author"
                 required
                 autocomplete="false"
+                value="{{ post.posted_by }}"
               />
             </div>
             <div class="form-group">
@@ -76,7 +79,10 @@
                 id="summernote"
                 name="editordata"
                 placeholder="Conteúdo da postagem"
-              ></textarea>
+                required
+              >
+                {{ post.content }}
+            </textarea>
             </div>
             <input type="submit" value="publish" placeholder="Publicar" />
           </form>
@@ -85,6 +91,6 @@
     </main>
 
     <footer>Tecnologia Solidária &copy;</footer>
-    <script src="../static/js/summernote.js"></script>
+    <script src="{{ url_for('static', path='js/summernote.js') }}"></script>
   </body>
 </html>
