--- a/site_ong/templates/new_user.html
+++ b/site_ong/templates/new_user.html
@@ -9,6 +9,12 @@
         <input type="username" id="username" name="username" required>
         <label for="password">Senha:</label>
         <input type="password" id="password" name="password" required>
+        <label for="role">Função:</label>
+        <select id="role" name="role">
+            <option value="admin">Administrador</option>
+            <option value="writer">Escritor</option>
+        </select>
+        <br>
         <button type="submit">Cadastrar</button>
     </form>
 </main>
