--- a/site_ong/templates/base.html
+++ b/site_ong/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tecnologia Solidária</title>
+    <!-- icon -->
+    <link rel="icon" href="{{ url_for('static', path='img/logo.jpg') }}" />
 
     <link rel="stylesheet" href="{{ url_for('static',
     path='styles/style.css')}}" />
@@ -15,7 +17,8 @@
             <ul>
                 <li><a href="/" >Página Inicial</a></li>
                 <li><a href="/contato">Contato</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="/posts">Blog</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </nav>
     </header>
