--- a/site_ong/static/styles/style.css
+++ b/site_ong/static/styles/style.css
@@ -1,113 +1,468 @@
+/* General Reset */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #f0f2f5;
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 1rem;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-nav ul li a.active {
-  font-weight: bold;
-}
-
-.banner {
-  text-align: center;
-  padding: 2rem;
-}
-
-.banner h1 {
-  font-size: 2rem;
-}
-
-.banner p {
-  font-size: 1.2rem;
-}
-
-.banner img {
-  width: 400px;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-.about {
-  padding: 2rem;
-}
-
-.contact {
-  padding: 2rem;
-}
-
-.cards {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: #f0f2f5;
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+  }
+  
+  /* Header and Navigation */
+  header {
+    background-color: #648880;
+    color: #fff;
+    padding: 1rem;
+  }
+  
+  nav ul {
+    list-style: none;
     display: flex;
-    flex-direction: column; /* Stack cards vertically */
-    align-items: center; /* Center cards horizontally */
-    margin: 0 auto; /* Center the cards container */
-    max-width: 100vw; /* Ensure the container takes full viewport width */
-}
-
-.card {
+    justify-content: space-around;
+  }
+  
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  nav ul li a.active {
+    font-weight: bold;
+  }
+  
+  /* Banner Section */
+  .banner {
+    text-align: center;
+    padding: 2rem;
+  }
+  
+  .banner h1 {
+    font-size: 2rem;
+  }
+  
+  .banner p {
+    font-size: 1.2rem;
+  }
+  
+  .banner img {
+    width: 400px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  /* About Section */
+  .about,.cards,.card,.login,.contact,.dashboard,.new-post,.new-user,.user-listing,.achievements,.collaborators,.logo, article {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+  }
+  
+  /* Cards */
+  .cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 100vw;
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+  
+  .card {
     background: #fff;
     padding: 1.5rem;
     border-radius: 0.75rem;
-    margin: 1rem 0; /* Adjust vertical margin for vertical stack */
-    max-width: 100vw; /* Ensure the card takes full viewport width */
-    width: 300px; /* Set a fixed width for the card */
+    max-width: 100vw;
+    width: 300px;
     border: 1px solid #eaeaea;
     transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-
-.card a {
-  cursor: pointer;
-  text-decoration: none;
-  color: inherit;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card:hover {
-  color: #343e7f;
-  border-color: #343e7f;
-}
-
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1rem;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-@media (max-width: 768px) {
-  nav ul {
+  }
+  
+  .card a {
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+  }
+  
+  .card h3 {
+    margin: 0 0 1rem 0;
+    font-size: 1.5rem;
+  }
+  
+  .card:hover {
+    color: #648880;
+    border-color: #648880;
+  }
+  
+  /* Footer */
+  footer {
+    background-color: #648880;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  /* Login Page */
+  .login {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: linear-gradient(135deg, #a1d3b0, #f6f1d3);
+    color: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .login h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .login form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  .login label {
+    margin-bottom: 0.5rem;
+  }
+  
+  .login input {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .login button {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #648880;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .login button:hover {
+    background-color: #a1d3b0;
+  }
+  
+  /* Contact Page */
+  .contact {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+  }
+  
+  .contact h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  
+  .contact form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .contact label {
+    margin-bottom: 0.5rem;
+  }
+  
+  .contact input,.contact textarea {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .contact button {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #648880;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .contact button:hover {
+    background-color: #a1d3b0;
+  }
+  
+  /* Dashboard */
+  .dashboard {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+  }
+  
+  .dashboard h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .dashboard p {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .dashboard button {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #648880;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 1rem;
+  }
+  
+  .dashboard button:hover {
+    background-color: #a1d3b0;
+  }
+  
+  /* New Post Form */
+  .new-post {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .new-post.title-add-post {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  
+  .new-post.form-container {
+    max-width: 600px;
+    margin: 0 auto;
+    width: 100%;
+  }
+  
+  .new-post.form-group {
+    margin-bottom: 1rem;
+  }
+  
+  .new-post.form-group input,.new-post.form-group textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .new-post.form-group textarea {
+    resize: vertical;
+  }
+  
+  .new-post input[type="submit"] {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #648880;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .new-post input[type="submit"]:hover {
+    background-color: #a1d3b0;
+  }
+  
+  /* New User */
+  .new-user {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .new-user h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
     text-align: center;
   }
-}
+  
+  .new-user form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .new-user label {
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+  }
+  
+  .new-user input[type="text"],.new-user input[type="username"],.new-user input[type="password"] {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .new-user button[type="submit"] {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #648880;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .new-user button[type="submit"]:hover {
+    background-color: #a1d3b0;
+  }
+  
+  /* User Listing */
+  .user-listing {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+  }
+  
+  .user-listing h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  
+  .user-listing table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0 auto;
+  }
+  
+  .user-listing th,.user-listing td {
+    border: 1px solid #ccc;
+    padding: 0.5rem;
+    text-align: left;
+  }
+  
+  .user-listing th {
+    background-color: #648880;
+    color: #fff;
+  }
+  
+  .user-listing tr:nth-child(even) {
+    background-color: #f9f9f9;
+  }
+  
+  .user-listing tr:hover {
+    background-color: #e6e6e6;
+  }
+  
+  /* Achievements and Collaborators */
+  .achievements,.collaborators {
+    padding: 2rem;
+    background-color: #f0f2f5;
+    color: #000;
+  }
+  
+  .collaborators {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+    margin-bottom: 3rem;
+  }
+  
+  .collaborator {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .collaborator h3 {
+    margin: 0 0 10px 0;
+    font-size: 18px;
+    color: #333;
+  }
+  
+  .collaborator p {
+    font-size: 14px;
+    color: #666;
+  }
+  
+  .logo {
+    width: 200px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-top: 2rem;
+  }
+  
+  /* Post Style */
+  article {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 2rem;
+  }
+  
+  article h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  
+  article h2 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  article p {
+    margin-bottom: 1rem;
+  }
+  
+  article div {
+    margin-top: 1rem;
+  }
+  
+  /* Post Content Styling */
+  article div {
+    white-space: pre-wrap;
+    word-break: break-word;
+  }
+  
+  /* Responsive Media Queries */
+  @media (max-width: 768px) {
+    article {
+      padding: 1rem;
+    }
+  
+    article h1 {
+      font-size: 2rem;
+    }
+  
+    article h2 {
+      font-size: 1.25rem;
+    }
+  }
