--- a/site_ong/templates/new_user.html
+++ b/site_ong/templates/new_user.html
@@ -1,13 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Novo Usuário</h1>
-<form action="/usuarios/novo" method="POST">
-    <label for="name">Nome:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="username">Nome de usuário:</label>
-    <input type="username" id="username" name="username" required>
-    <label for="password">Senha:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">Cadastrar</button>
-</form>
+<main class="new-user">
+    <h1>Novo Usuário</h1>
+    <form action="/usuarios/novo" method="POST">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="username">Nome de usuário:</label>
+        <input type="username" id="username" name="username" required>
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password" required>
+        <label for="role">Função:</label>
+        <select id="role" name="role">
+            <option value="admin">Administrador</option>
+            <option value="writer">Escritor</option>
+        </select>
+        <br>
+        <button type="submit">Cadastrar</button>
+    </form>
+</main>
 {% endblock %}
