--- a/site_ong/templates/index.html
+++ b/site_ong/templates/index.html
@@ -3,7 +3,7 @@
 <main>
     <section class="banner">
         <h1>Tecnologia Solidária</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Nossa missão é levar tecnologia de forma acessível a população carente!</p>
         <img src="{{ url_for('static', path='img/logo.jpg') }}" alt="Logo do Tecnologia Solidária">
     </section>
     <section class="about">
