--- a/site_ong/static/styles/style.css
+++ b/site_ong/static/styles/style.css
@@ -172,38 +172,33 @@
     margin-bottom: 1rem;
   }
   
-  .contact form {
+  .contact ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+  .contact li {
+    margin-bottom: 1rem;
+  }
+  
+  .contact a {
+    color: #648880;
+    text-decoration: none;
+  }
+  
+  .contact a:hover {
+    text-decoration: underline;
+  }
+  
+.contact-container {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    max-width: 400px;
+    justify-content: center;
+    align-items: center;
+    max-width: 800px; 
     margin: 0 auto;
   }
   
-  .contact label {
-    margin-bottom: 0.5rem;
-  }
-  
-  .contact input,.contact textarea {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  .contact button {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 5px;
-    background-color: #648880;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .contact button:hover {
-    background-color: #a1d3b0;
-  }
   
   /* Dashboard */
   .dashboard {
