corrigindo erros e formatação do html

--- a/site_ong/templates/contato.html
+++ b/site_ong/templates/contato.html
@@ -1,15 +1,24 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <main>
-    <section class="contact">
-        <div class="contact-container">
-            <h2>Contato</h2>
-            <p>Estamos sempre procurando parceiros interessados em colaborar conosco ou pessoas dispostas a fazer doações. Entre em contato conosco para saber mais.</p>
-            <ul>
-                <li><strong>Instagram:</strong> <a href="https://www.instagram.com/ong.tecnologiasolidaria/" target="_blank">ong.tecnologiasolidaria</a></li>
-                <li><strong>Email:</strong> <a href="mailto:ongtecnologiasolidaria@gmail.com">ongtecnologiasolidaria@gmail.com</a></li>
-            </ul>
-        </div>
-    </section>
+  <section class="contact">
+    <div class="contact-container">
+      <h2>Contato</h2>
+      <p>
+        Estamos sempre procurando parceiros interessados em colaborar conosco ou
+        pessoas dispostas a fazer doações. Entre em contato conosco para saber
+        mais.
+      </p>
+      <ul>
+        <li>
+          <strong>Instagram:</strong>
+          <a href="https://www.instagram.com/ong.tecnologiasolidaria/" target="_blank">ong.tecnologiasolidaria</a>
+        </li>
+        <li>
+          <strong>Email:</strong>
+          <a href="mailto:ongtecnologiasolidaria@gmail.com">ongtecnologiasolidaria@gmail.com</a>
+        </li>
+      </ul>
+    </div>
+  </section>
 </main>
 {% endblock %}
