--- a/site_ong/templates/index.html
+++ b/site_ong/templates/index.html
@@ -8,12 +8,19 @@
     </section>
     <section class="about">
         <h2>Sobre Nós</h2>
-        <p>ONG sem fins lucrativos Instituição criada em 2023 com a causa Social e Ambiental de ajudar na preservação do meio ambiente, retirando de circulação equipamentos já obsoletos e em desuso, os chamados “Lixo Eletrônico”, Computadores, Notebooks, Celulares e demais acessórios de Tecnologia e Informática. Realizando a triagem completa destes equipamentos e dando a destinação ecologicamente correta. Quando possível a restauração e reaproveitamento destes equipamentos e destinando o lixo eletrônico para o descarte ecologicamente correto.</p>
+        <p>ONG sem fins lucrativos Instituição criada em 2023 com a causa Social e Ambiental de ajudar na preservação do
+            meio ambiente, retirando de circulação equipamentos já obsoletos e em desuso, os chamados “Lixo Eletrônico”,
+            Computadores, Notebooks, Celulares e demais acessórios de Tecnologia e Informática. Realizando a triagem
+            completa destes equipamentos e dando a destinação ecologicamente correta. Quando possível a restauração e
+            reaproveitamento destes equipamentos e destinando o lixo eletrônico para o descarte ecologicamente correto.
+        </p>
         <p>Os equipamentos reparados serão destinados a entidades, instituições e população carente.</p>
     </section>
     <section class="achievements">
         <h2>Conquistas:</h2>
-        <p>ONG recém inaugurada buscando fazer a diferença no ramo da tecnologia com o aprimoramento e crescimento Social e institucional. Com grande orgulho contamos com uma empresa parceira com sede no bairro Vila Sônia no Morumbi, estamos em busca de mais parcerias e amigos do bem.</p>
+        <p>ONG recém inaugurada buscando fazer a diferença no ramo da tecnologia com o aprimoramento e crescimento
+            Social e institucional. Com grande orgulho contamos com uma empresa parceira com sede no bairro Vila Sônia
+            no Morumbi, estamos em busca de mais parcerias e amigos do bem.</p>
     </section>
     <section class="collaborators">
         <h2>Colaboradores</h2>
