--- a/site_ong/templates/blog.html
+++ b/site_ong/templates/blog.html
@@ -1,18 +1,11 @@
-{% extends 'base.html'%}
-{% block content %} 
-
-{% for post in posts %}
-  <section class="cards">
-      <!-- opens a a tag with url_for to /posts/{post.id} -->
+{% extends 'base.html'%} {% block content %} {% for post in posts %}
+<section class="cards">
   <a href="{{ url_for('post', post_id=post.id) }}">
-      <div class="card">
-        <h3>{{ post.title }}</h3>
-        <h4>{{ post.subhead }}</h4>
-        <p>
-          Escrito por {{ post.posted_by }} em {{ post.date_posted }}
-        </p>
-      </div>
-    </a>
-  </section>
-{% endfor %}
-{% endblock %}
+    <div class="card">
+      <h3>{{ post.title }}</h3>
+      <h4>{{ post.subhead }}</h4>
+      <p>Escrito por {{ post.posted_by }} em {{ post.date_posted }}</p>
+    </div>
+  </a>
+</section>
+{% endfor %} {% endblock %}
