--- a/site_ong/templates/dashboard.html
+++ b/site_ong/templates/dashboard.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Dashboard{% endblock %}
-
 {% block content %}
-<section class="dashboard"
+<section class="dashboard">
     <h1>Dashboard</h1>
     <p>Olá, {{ user.full_name }}!</p>
 
