--- a/site_ong/templates/new_post.html
+++ b/site_ong/templates/new_post.html
@@ -1,90 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tecnologia Solidária</title>
 
-    <link rel="stylesheet" href="{{ url_for('static',
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tecnologia Solidária</title>
+
+  <link rel="stylesheet" href="{{ url_for('static',
     path='styles/style.css')}}" />
-    <!-- include libraries(jQuery, bootstrap) -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <!-- include libraries(jQuery, bootstrap) -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <!-- include summernote css/js -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-  </head>
+  <!-- include summernote css/js -->
+  <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+</head>
 
-  <body>
-    <main class="new-post">
-      <section>
-        <div class="title-add-post">
-          <h1>Criar Nova Postagem</h1>
-        </div>
-      </section>
+<body>
+  <main class="new-post">
+    <section>
+      <div class="title-add-post">
+        <h1>Criar Nova Postagem</h1>
+      </div>
+    </section>
 
-      <section>
-        <div class="form-container">
-          <form
-            name="post-form"
-            id="post-form"
-            method="post"
-            action="/posts/novo"
-          >
-            <div class="form-group">
-              <input
-                type="text"
-                name="title"
-                placeholder="Título"
-                id="title"
-                required
-                autofocus
-                autocomplete="false"
-              />
-            </div>
-            <div class="form-group">
-              <input
-                type="text"
-                name="subhead"
-                placeholder="Subtítulo"
-                id="subhead"
-                required
-                autocomplete="false"
-              />
-            </div>
-            <div class="form-group">
-              <input
-                type="text"
-                name="author"
-                placeholder="Autor"
-                id="author"
-                required
-                autocomplete="false"
-              />
-            </div>
-            <div class="form-group">
-              <textarea
-                rows="15"
-                id="summernote"
-                name="editordata"
-                placeholder="Conteúdo da postagem"
-              ></textarea>
-            </div>
-            <input type="submit" value="publish" placeholder="Publicar" />
-          </form>
-        </div>
-      </section>
-    </main>
+    <section>
+      <div class="form-container">
+        <form name="post-form" id="post-form" method="post" action="/posts/novo">
+          <div class="form-group">
+            <input type="text" name="title" placeholder="Título" id="title" required autofocus autocomplete="false" />
+          </div>
+          <div class="form-group">
+            <input type="text" name="subhead" placeholder="Subtítulo" id="subhead" required autocomplete="false" />
+          </div>
+          <div class="form-group">
+            <input type="text" name="author" placeholder="Autor" id="author" required autocomplete="false" />
+          </div>
+          <div class="form-group">
+            <textarea rows="15" id="summernote" name="editordata" placeholder="Conteúdo da postagem"></textarea>
+          </div>
+          <input type="submit" value="publish" placeholder="Publicar" />
+        </form>
+      </div>
+    </section>
+  </main>
 
-    <footer>Tecnologia Solidária &copy;</footer>
-    <script src="../static/js/summernote.js"></script>
-  </body>
+  <footer>Tecnologia Solidária &copy;</footer>
+  <script src="../static/js/summernote.js"></script>
+</body>
+
 </html>
