corrigindo o acesso RBAC e criando página de edição de usuários

--- a/site_ong/templates/delete_user.html
+++ b/site_ong/templates/delete_user.html
@@ -6,4 +6,5 @@
     <input type="username" id="username" name="username" required />
     <button type="submit">Deletar</button>
 </form>
+<p style="color: red;">{{ error }}</p>
 {% endblock %}
