--- a/site_ong/templates/login.html
+++ b/site_ong/templates/login.html
@@ -10,5 +10,7 @@
         <input type="password" id="password" name="password" required>
         <button type="submit">Entrar</button>
     </form>
+    <p style="color: red;">{{ error }}</p>
 </section>
+
 {% endblock %}
