fazendo o deploy no flyio e fazendo alterações necessárias

--- a/site_ong/templates/base.html
+++ b/site_ong/templates/base.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tecnologia Solidária</title>
   <!-- icon -->
-  <link rel="icon" href="{{ url_for('static', path='img/logo.jpg') }}" />
+  <link rel="icon" href="/static/img/logo.jpg" />
 
-  <link rel="stylesheet" href="{{ url_for('static',
-    path='styles/style.css')}}" />
+  <link rel="stylesheet" href="/static/styles/style.css" />
 </head>
 
 <body>
