--- a/site_ong/templates/posts_admin.html
+++ b/site_ong/templates/posts_admin.html
@@ -16,5 +16,5 @@
     </div>
     {% endfor %}
 </section>
-<script src="{{ url_for('static', path='js/confirm_delete.js') }}"></script>
+<script src="../static/js/confirm_delete.js"></script>
 {% endblock %}
