--- a/site_ong/templates/index.html
+++ b/site_ong/templates/index.html
@@ -4,11 +4,12 @@
     <section class="banner">
         <h1>Tecnologia Solidária</h1>
         <p>Nossa missão é levar tecnologia de forma acessível a população carente!</p>
-        <img src="{{ url_for('static', path='img/logo.jpg') }}" alt="Logo do Tecnologia Solidária">
+        <img src="/static/img/logo.jpg" alt="Logo do Tecnologia Solidária">
     </section>
     <section class="about">
         <h2>Sobre Nós</h2>
-        <p>ONG sem fins lucrativos Instituição criada em 2023 com a causa Social e Ambiental de ajudar na preservação do
+        <p>ONG sem fins lucrativos!</p>
+        <p>Instituição criada em 2023 com a causa Social e Ambiental de ajudar na preservação do
             meio ambiente, retirando de circulação equipamentos já obsoletos e em desuso, os chamados “Lixo Eletrônico”,
             Computadores, Notebooks, Celulares e demais acessórios de Tecnologia e Informática. Realizando a triagem
             completa destes equipamentos e dando a destinação ecologicamente correta. Quando possível a restauração e
