--- a/site_ong/templates/new_post.html
+++ b/site_ong/templates/new_post.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tecnologia Solidária</title>
 
-  <link rel="stylesheet" href="{{ url_for('static',
-    path='styles/style.css')}}" />
+  <link rel="stylesheet" href="/static/styles/style.css" />
   <!-- include libraries(jQuery, bootstrap) -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -48,7 +47,7 @@
   </main>
 
   <footer>Tecnologia Solidária &copy;</footer>
-  <script src="../static/js/summernote.js"></script>
+  <script src="/static/js/summernote.js"></script>
 </body>
 
 </html>
