--- a/site_ong/templates/users.html
+++ b/site_ong/templates/users.html
@@ -16,6 +16,7 @@
             <td>{{ user.username }}</td>
             <td>{{ user.role }}</td>
             <td><a href="/usuarios/editar/{{ user.id }}">Editar</a></td>
+            <!-- <td><a href="{{ url_for('edit_user', user_id=user.id )}}">Editar</a></td> -->
         </tr>
         {% endfor %}
     </table>
